tests/unit/default/syntax-error/046-create-table-parens-name-colon-type-params-null-eq-str.e.t
---- IN ----
+%table(id:decimal(10,2)?='string'
---- OUT ----
---- ERR ----
syntax: expected `)` after `...?='string'` instead of EOL at position 34 - at line 1
---- EXIT ----
1
